# python-cachedir-tag

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  tox.ini
src/cachedir_tag/: __init__.py  __main__.py
tests/: test_constants.py  test_contains_tag.py  test_is_tagged.py
