[metadata]
name = cachedir-tag
version = 0.0.4
author = Alex Willmer
author_email = alex@moreati.org.uk
description = Handle CACHEDIR.TAG files, indicating directories that contain cached content
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/moreati/python-cachedir-tag
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    cache
    cachedir
    cachedirtag

[options]
package_dir =
    = src
packages = find:
install_requires =
    pathlib; python_version < '3.4'
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*

[bdist_wheel]
universal=1

[options.packages.find]
where = src
